# hunter-android-studio

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dryganets/hunter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/dryganets/hunter/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/dryganets/hunter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
